# md_files_merge

./: .gitignore  README.md  pyproject.toml
md_files_merge/: __init__.py  __main__.py  merger.py
