[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-md-extract"
version = "0.1.0"
description = "Command line tool and library to extract Markdown files from GitHub repositories."
readme = "README.md"
authors = [{name = "Your Name"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.scripts]
gh-md-extract = "gh_md_extract.cli:main"

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]

