[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "md-files-merge"
version = "0.1.0"
description = "Command line tool and library to merge Markdown files in dirs and subdirs into one big markdown."
readme = "README.md"
authors = [{name = "Your Name"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.scripts]
md-files-merge = "md_files_merge"
